# voltra2

./: README.md  main.py  pyproject.toml
project/: database.db  main.py
project/static/: style.css
project/templates/: 404.html  index.html
