[project]
name = "voltra-phishing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
[tool.vercel]
entrypoint = "project.main:app"
